把导航改为公共视图 通过枚举类型来渲染

--- a/CompanyWebSite/wwwroot/layui/layui-select-ext/index.html
+++ b/CompanyWebSite/wwwroot/layui/layui-select-ext/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="keywords" content="xiaoyu" /><meta charset="UTF-8">
+	<meta name="keywords" content="@Model.SystemInfo.KeyWords" /><meta charset="UTF-8">
 	<title> layui-select-ext 表单select多选和无限级联动</title>
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
